<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:id="@+id/add_cloth"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/cloth_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:gravity="center"

        android:textSize="20sp"
        android:background="@color/input"
        android:hint="@string/input_cloth_id"/>

    <ImageView
        android:id="@+id/cloth_picture"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_weight="0.5"/>

    <Button
        android:id="@+id/native_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"

        android:textSize="20sp"
        android:text="@string/native_picture" />

    <Button
        android:id="@+id/take_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"

        android:textSize="20sp"
        android:text="@string/take_photo" />

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"

        android:textSize="20sp"
        android:background="@color/confirm"
        android:text="@string/submit" />

</LinearLayout>