<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:id="@+id/mainActivity"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/add_cloth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="200dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"

        android:textSize="20sp"
        android:text="@string/add_cloth"/>


    <Button
        android:id="@+id/add_new_schedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@id/add_cloth"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"

        android:textSize="20sp"
        android:text="@string/add_new_schedule"/>

    <Button
        android:id="@+id/query_schedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@id/add_new_schedule"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30dp"

        android:textSize="20sp"
        android:text="@string/query_schedule"/>

</RelativeLayout>